force-app/main/default/objects/fboost__B_Event__e/fboost__B_Event__e.object-meta.xml
<CustomObject>
    <description>Boost framework event used for logging and metrics</description>
    <label>Boost Event</label>
    <pluralLabel>Boost Events</pluralLabel>
</CustomObject>