force-app/main/default/objects/fboost__B_Event__e/fields/fboost__ContextUserId__c.field-meta.xml
<CustomField>
    <fullName>fboost__ContextUserId__c</fullName>
    <description>Context user id</description>
    <label>ContextUserId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>