force-app/main/default/objects/fboost__B_Event__e/fields/fboost__ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>fboost__ErrorMessage__c</fullName>
    <label>Error Message</label>
    <length>90000</length>
    <type>LongTextArea</type>
</CustomField>