force-app/main/default/objects/fboost__B_Event__e/fields/fboost__ExceptionName__c.field-meta.xml
<CustomField>
    <fullName>fboost__ExceptionName__c</fullName>
    <description>Exception Class Name</description>
    <label>Exception Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>