force-app/main/default/objects/fboost__B_Event__e/fields/fboost__ExceptionStackTrace__c.field-meta.xml
<CustomField>
    <fullName>fboost__ExceptionStackTrace__c</fullName>
    <label>Exception Stack Trace</label>
    <length>90000</length>
    <type>LongTextArea</type>
</CustomField>