force-app/main/default/objects/fboost__B_Event__e/fields/fboost__MetricName__c.field-meta.xml
<CustomField>
    <fullName>fboost__MetricName__c</fullName>
    <description>Metric Name</description>
    <label>Metric Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>