force-app/main/default/objects/fboost__B_Event__e/fields/fboost__RecordId__c.field-meta.xml
<CustomField>
    <fullName>fboost__RecordId__c</fullName>
    <description>Related Salesforce RecordId</description>
    <label>RecordId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>