force-app/main/default/objects/fboost__B_Event__e/fields/fboost__Value__c.field-meta.xml
<CustomField>
    <fullName>fboost__Value__c</fullName>
    <description>Metric value</description>
    <label>Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>